--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ img {
 .password-validation {
   font-weight: 400;
   color: grey;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  font-size: smaller;
 }
 
 .submit-btn {
